cabal-version:      3.0
name:               compare
version:            0.1.0.0

common warnings
    ghc-options: -Wall
    -- ghc-options: -ddump-simpl -ddump-to-file

benchmark compare
    import: warnings

    main-is: Main.hs

    build-depends:
        base
      , deepseq
      , samsort
      , primitive
      , criterion
      , vector
      , vector-algorithms

    if impl(ghc >= 8.6)
        ghc-options: -fproc-alignment=64

    hs-source-dirs: .
    default-language: Haskell2010
    type: exitcode-stdio-1.0
